test/langtools/tools/javac/valhalla/primitive-classes/CheckQuestionInMessages.out
CheckQuestionInMessages.java:13:22: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: java.lang.Object, java.util.List<X>)
CheckQuestionInMessages.java:14:18: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: java.lang.Object[], X[])
2 errors
